feat: Update package.json to include bin entry for snowrail-mcp and modify pnpm-lock.yaml to downgrade dependencies for compatibility, including @types/node, zod, tsx, and typescript.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "dist/snowrail-mcp.js",
   "author": "<Wolfcito>",
+  "bin": {
+    "snowrail-mcp": "dist/snowrail-mcp.js"
+  },
   "scripts": {
     "dev": "tsx src/snowrail-mcp.ts",
     "build": "tsc",
